# sycl-openrand

./: CMakeLists.txt
src/: CMakeLists.txt  GSimulation.cpp
